fix text showing behind button b/c of opacity bug

--- a/styles/app/tasks.styl
+++ b/styles/app/tasks.styl
@@ -95,15 +95,14 @@ for $stage in $stages
   outline: 0
   border: 0
   border-radius: 0 //required to nuke BB-playbook user agent styles
-  background-color: darken($best, 20%)
-  opacity: 0.75
+  background-color: darken($best, 15%)
   &:hover,
   &:focus
-    opacity: 1
+    // opacity: 1
     background-color: darken($best, 20%)
   &:active
     background-color: darken($best, 30%)
-    opacity: 1
+    // opacity: 1
 
 
 // an individual task entry
